# orv

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/orv-analyzer/src/: analysis.rs  lib.rs  lower.rs  purity.rs  tests.rs  types.rs  validate.rs
crates/orv-cli/: Cargo.toml
crates/orv-cli/src/: main.rs
crates/orv-cli/tests/: cli_e2e.rs
crates/orv-compiler/: Cargo.toml
crates/orv-compiler/src/: emit.rs  lib.rs  pipeline.rs
crates/orv-core/: Cargo.toml
crates/orv-core/src/: lib.rs
crates/orv-core/tests/: fixture_harness.rs
crates/orv-diagnostics/: Cargo.toml
crates/orv-diagnostics/src/: lib.rs  render.rs
crates/orv-hir/src/: dump.rs  hir.rs  lib.rs
crates/orv-macros/: Cargo.toml
crates/orv-macros/src/: lib.rs
crates/orv-macros/tests/: smoke.rs
crates/orv-project/: Cargo.toml
crates/orv-project/src/: lib.rs
crates/orv-resolve/: Cargo.toml
crates/orv-resolve/src/: lib.rs  resolver.rs  scope.rs  symbol.rs  tests.rs
crates/orv-runtime/src/: db.rs  eval.rs  html.rs  interp.rs  island.rs  lib.rs  render.rs  runner.rs  server.rs
crates/orv-span/: Cargo.toml
crates/orv-span/src/: lib.rs
crates/orv-syntax/: Cargo.toml
crates/orv-syntax/src/: ast.rs  cursor.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/orv-syntax/tests/: lex_fixtures.rs
docs/: README.ko.md  README.md  SPEC.md
docs/specs/: 2026-04-03-orv-implementation-roadmap.ko.md  2026-04-03-orv-implementation-roadmap.md  2026-04-03-project-optimization-design.ko.md  2026-04-03-project-optimization-design.md  2026-04-04-editor-dx-design.ko.md  2026-04-04-editor-dx-design.md  README.ko.md  README.md
docs/superpowers/plans/: 2026-04-03-phase0-foundations.md  2026-04-03-phase1-lexer.md  2026-04-03-phase2-parser.md  2026-04-03-phase3-name-resolution.md
docs/usernote/: README.ko.md  README.md  getting-started.ko.md  getting-started.md  syntax.ko.md  syntax.md  why-miol.md  why-orv.ko.md  why-orv.md
docs/usernote/syntax/: best-practices.ko.md  best-practices.md  collections.ko.md  collections.md  define.ko.md  define.md  functions.ko.md  functions.md  fundamentals.ko.md  fundamentals.md  hints.ko.md  hints.md  index.ko.md  index.md  modules.ko.md  modules.md  nodes.ko.md  nodes.md  server.ko.md  server.md  ui.ko.md  ui.md
fixtures/analyzer/: scope-resolution.orv  type-inference.orv
fixtures/e2e/: middleware.orv
fixtures/err/: children-outside-define.orv  design-in-html.orv  domain-html-in-server.orv  domain-route-in-ui.orv  env-coercion-fail.orv  fetch-missing-param.orv  import-cycle-b.orv  import-cycle.orv  listen-outside-server.orv  multiple-respond.orv  object-vs-block-ambiguous.orv  return-in-route.orv
fixtures/ok/: closures.orv  counter.orv  design-theme.orv  env-inference.orv  fullstack-rpc.orv  hello.orv  null-coalesce.orv  server-basic.orv  try-catch.orv  when-patterns.orv
fixtures/parser/: server-basic.orv
fixtures/project-e2e/: orv.toml
fixtures/project-e2e/src/: main.orv
fixtures/project-e2e/src/lib/: db.orv
fixtures/project-e2e/src/middlewares/: auth.orv  json.orv  ratelimit.orv
fixtures/project-e2e/src/pages/: home.orv  notfound.orv
fixtures/project-e2e/src/routes/: health.orv
fixtures/project-e2e/src/routes/user/: count.orv  delete.orv  index.orv  list.orv
fixtures/project-e2e/src/styles/: global.orv
fixtures/runtime/: define-component.orv  html-page.orv  server-basic.orv
