[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["eunhhu"]
edition = "2024"
license = "MIT"
repository = "https://github.com/eunhhu/orv"
rust-version = "1.88.0"

[workspace.dependencies]
# Internal crates
orv-core = { path = "crates/orv-core" }
orv-macros = { path = "crates/orv-macros" }
orv-cli = { path = "crates/orv-cli" }

# Proc-macro utilities
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Graphics
wgpu = "29"

# Testing
pretty_assertions = "1"
trybuild = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"