[package]
name = "orv-cli"
description = "CLI frontend for the orv DSL"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "orv"
path = "src/main.rs"

[dependencies]
orv-core = { workspace = true }
orv-diagnostics = { workspace = true }
orv-syntax = { workspace = true }
orv-resolve = { workspace = true }
orv-analyzer = { workspace = true }
orv-compiler = { workspace = true }
orv-project = { workspace = true }
orv-runtime = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
codespan-reporting = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
