[package]
name = "orv-compiler"
description = "Frontend compilation pipeline for the orv language"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orv-analyzer = { workspace = true }
orv-core = { workspace = true }
orv-diagnostics = { workspace = true }
orv-project = { workspace = true }
orv-span = { workspace = true }
orv-syntax = { workspace = true }
orv-hir = { workspace = true }
orv-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
