[package]
name = "orv-project"
description = "Project graph extraction for the orv language"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
orv-hir = { workspace = true }
orv-syntax = { workspace = true }
orv-diagnostics = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
