[package]
name = "orv-span"
description = "File identity and byte-span tracking for the orv compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
